# eris

./: .cursorignore  .cursorrules  .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  askama.toml  build.rs  test_qdrant.rs
.cargo/: config.toml
.github/workflows/: ci.yml  cla.yml
docs/: ADDING_A_TOOL.md  CLA.md  END_USER_README.md  ISSUES.MD  LLAMA_CPP_SETUP.md  OPERATOR_MANUAL.md  REFERENCE.md  STATE.MD  TOOLS.md  WEB_BROWSER39.md  _POST_MORTEM.md
docs/HOW_TO/: ADDING_A_TOOL.md  AUDIO.md  END_USER_README.md  LLAMA_CPP_SETUP.md  VISION.md
docs/LLAMACCP_GRAMMAR/: 0_METAPLAN.md  1_PHASE0_CONFIG_TYPES_BACKEND_ENUM.md  2_PHASE1_LLAMACPP_ENGINE.md  3_PHASE2_PROCESS_MANAGEMENT.md  4_PHASE3_EMBEDDING_ABSTRACTION.md  5_PHASE4_GBNF_GRAMMAR_STATIC_ENVELOPE.md  6_PHASE5_RECOVERY_REDESIGN.md  7_PHASE6_HEALTH_TRACING.md  8_PHASE7_DYNAMIC_PER_TOOL_GRAMMAR.md  9_PHASE8_DOCUMENTATION.md  HANDOVER_TESTING_AND_DOCS.md
docs/TODO/: 00_DECOUPLE_UI.md  01_BIG_CONTENT_LENS.md  02_CHRONIC.md  03_WORKING_PLAN.md  04_MEMORY_update.md  GARDENER_MVP.md  GEMINI-logo-refresh-prompt.md  GWS_IMPLEMENATION.md  HANDOVER-doc-summarize-v1.md  HANDOVER-eris-system-dev-landing-page.md  IMAGE_GENERATION_MODE.md  LARGE_DOCUMENT_RAG_PIPELINE.md  REASON_VERIFY_TOOL.md  SLEEP_MODE.md  SOFTEN_TEST_FULL_OOM.md  WEB_BROWSER39.md  ZETTELKASTEN_MEMORY.md  __0_LLAMA.md  http_models.md
docs/architecture/: S00.1_CLI Schema & The Error Taxonomy.md  S00_Foundation & Telemetry.md  S01.1_Reasoning Routing & Token Firewall.md  S01_The LLM Engine (Layer 1).md  S02.1_Ephemeral Memory (The `moka` TTL cache).md  S02_Memory Subsystem Tier 1 & Tier 2.md  S04.3_Autonomy & Heartbeat (The `Idle` State).md  S04_The Subconscious Orchestrator (Layer 2).md  S05.1_Gatekeeper Logic & Semantic Guards.md  S06.1_External Capabilities.md  S06.2_Temporal Memory (The Agenda Queue).md  S08_Deployment, Telemetry & The Pre-Flight Matrix.md  Z00_Appendix A Rust Coding Directives.md  __MORE_FIXES.md  __POST_MORTEM.md
docs/outdated_architecture/: S00.2_Global Configuration (AppConfig).md  S00.3_Identity Bootstrap (The Soft-Keel).md  S01_The LLM Engine (Layer 1).md  S03_The Vault & Vector Abstraction.md  S04.1_Context Assembly & Handoff Protocol.md  S04.2_The "Fuckup" Recovery Loop.md  S04.3_Autonomy & Heartbeat (The `Idle` State).md  S05_The Tool Gatekeeper.md  S06_Core Tool Manifest (The Hands & Eyes).md  S07_The Interface (The Cockpit - TUI).md  __PREAMBEL.md
docs/updated_architecture/: 00_OVERVIEW.md  01_BOOTSTRAP_AND_EXECUTIVE.md  02_ORCHESTRATOR_LAYER.md  03_ENGINE_LLM_AND_ROUTING.md  04_MEMORY_SUBSYSTEM.md  05_TOOLS_GATEKEEPER_DESCRIPTORS.md  06_UI_TELEMETRY_OPERATIONS.md  07_CROSS_CUTTING.md  08_SELF_REVIEW.md  09_CRITICAL_REVIEW.md  0_OVERVIEW.md  10_DEEP_REVIEW_2026-07.md  11_OSS_SHIPPING_ROADMAP.md  12_META_STRATEGY.md  13_MEMVID_AND_MEMORY_SIMPLIFICATION.md  1_ORCHESTRATOR.md  2_MEMORY.md  3_TOOLS_AND_GATEKEEPER.md  4_CRITICAL_REVIEW.md  README.md
scripts/: build-release-targets.sh  build.rs  release-targets.txt  test-full-detached.sh
src/: config.rs  main.rs  vault_layout.rs  workspace.rs
src/api/: client.rs  template.rs
src/benchmark/: harness.rs  isolation.rs  metrics.rs  mock_engine.rs  mod.rs  mutation_tracker.rs  reporter.rs  runner.rs  speed_probe.rs  storage.rs  suite.rs
src/engine/: chat_engine.rs  embedding.rs  llama_cpp.rs  llama_server.rs  mod.rs  ollama.rs  router.rs  scratch.rs  scratch_test.rs  token_metrics.rs  traits.rs
src/executive/: chat_session.rs  cli.rs  error.rs  identity_md.rs  ignition.rs  mod.rs  peripherals.rs  router.rs  vault_identity.rs
src/ingest/: extract.rs  mod.rs  shared.rs
src/media/: card.rs  mod.rs  paths.rs
src/memory/: buffer.rs  buffer_handles.rs  document_ingest_queue.rs  document_store.rs  ephemeral.rs  mod.rs  prefetch.rs  reindex_watch.rs  semantic.rs  turn_end.rs  types.rs
src/skills/: jit.rs  (+8 more)
tool_specs/: agenda_complete.toml  agenda_list.toml  agenda_push.toml  memory_commit.toml  memory_commit_all.toml  memory_query.toml  memory_stage.toml  memory_staged_list.toml  system_health.toml  vault_list.toml  vault_read.toml  vault_write.toml  web_artifact_query.toml  web_fetch.toml
(+241 files in other folders)
