[package]
name = "eris"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-util = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.27.0"
figment = { version = "0.10", features = ["test"] }
