[package]
name = "eris"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-util = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
async-trait = "0.1"
ollama-rs = { version = "0.2", features = ["stream"] }
tokio-stream = "0.1.18"
moka = { version = "0.12", features = ["future"] }
bincode = "1.3"
schemars = "0.8"
jsonschema = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
htmd = "0.1"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
inquire = "0.7"
toml = "0.8"
qdrant-client = "1.7.0"
uuid = { version = "1.7.0", features = ["v4"] }
url = "2.5"

[dev-dependencies]
tempfile = "3.27.0"
figment = { version = "0.10", features = ["test"] }
wiremock = "0.6"
url = "2.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
