[package]
name = "eris"
version = "0.1.0"
build = "scripts/build.rs"
authors = [
    "Jan Paul Dahlke <janpauldahlke@gmail.com>",
    "Jan Paul Dahlke <jandareal@gmail.com>",
    "Eris <admin@eris-system.dev>",
]
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "env"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "signal", "time", "fs"] }
tokio-util = "0.7"
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15"
async-trait = "0.1"
ollama-rs = { version = "0.3", features = ["stream"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures = "0.3"
moka = { version = "0.12", features = ["future"] }
bincode = "1.3"
schemars = "0.8"
jsonschema = "0.17"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
htmd = "0.1"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
inquire = "0.7"
toml = "0.8"
qdrant-client = "1.7.0"
uuid = { version = "1.7.0", features = ["v4", "v5"] }
url = "2.5"
percent-encoding = "2.3"
sysinfo = "0.38.4"
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
tempfile = "3.27.0"
notify = "6.1"
base64 = "0.22"
jsonwebtoken = "9"
unicode-normalization = "0.1"
regex = "1"
axum = { version = "0.8", features = ["json", "macros"] }
askama = { version = "0.14", features = ["blocks", "derive"] }
askama_web = { version = "0.14", features = ["axum-0.8"] }
serenity = { version = "0.12.5", default-features = false, features = [
    "builder",
    "cache",
    "client",
    "gateway",
    "model",
    "rustls_backend",
] }
scraper = "0.22"
shellexpand = "3"

[build-dependencies]
gws-builder = "0.1"

[dev-dependencies]
tempfile = "3.27.0"
figment = { version = "0.10", features = ["test"] }
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
